<resources>
    <string name="app_name">TechCycle</string>
    <string name="default_web_client_id">256423153606-n1761dggljrv1ij0ulrn4vjdklh8mk5n.apps.googleusercontent.com</string>
    <string name="google_maps_api_key">AIzaSyDEK0zhaM_lIkARVjQzWO4cjJrOzR-xZWw</string>
    <string name="splash_logo_description">TechCycle app logo</string>
    <string name="splash_subtitle">Connect. Exchange. Reduce</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="register_here">Don\'t have an account? <font color="#127d70">Register</font></string>
    <string name="splash_background_description">Welcome background image</string>
    <string name="shape_description">Decorative element, design shape</string>
    <string name="buttonEmailLogin">Continue with Email</string>
    <string name="buttonGmailLogin">Continue with Google</string>
    <string name="registerTextView">Don´t you have an account? <font color="#127d70">Register</font></string>
    <string name="login_prompt_title">Please login to continue</string>
    <string name="login_prompt_subtitle">Welcome! Please enter your details.</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot your password? <font color="#127d70">Recover</font></string>
    <string name="recover_password">Recover</string>
    <string name="login_button_text">Login</string>
    <string name="google_login">Continue with Google</string>
    <string name="splash_background_description2">Login screen background</string>
    <string name="separator_text">Or</string>
    <string name="register_prompt_title">Register a new account</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="terms_and_conditions">I agree to the terms and conditions</string>
    <string name="register_button_text">Register</string>
    <string name="recover_prompt_title">Forgot your password?</string>
    <string name="recover_prompt_subtitle">Enter your email address. We will send you recovery instructions.</string>
    <string name="recover_button_text">Send</string>
    <string name="nav_home">Home</string>
    <string name="nav_my_ads">My ads</string>
    <string name="nav_publish">Publish</string>
    <string name="nav_favorites">Favourites</string>
    <string name="nav_profile">Profile</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="fragment_home">HOME</string>
    <string name="fragment_my_ads">MY ADS</string>
    <string name="fragment_publish">PUBLISH</string>
    <string name="fragment_favorites">FAVORITES</string>
    <string name="fragment_profile">PROFILE</string>
    <string name="progress_loading">Loading, please wait…</string>
    <string name="logout">Close Session</string>
    <string name="profile_title">User Profile</string>
    <string name="profile_image_description">User profile image</string>
    <string name="information_label">Information</string>
    <string name="name_label">Name:</string>
    <string name="email_label">Email:</string>
    <string name="member_since_label">Member since:</string>
    <string name="account_status_label">Account status:</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="manage_ads">Manage ads</string>
    <string name="session_closed">Session successfully closed</string>
    <string name="profile_name_value">Miguel Rodriguez</string>
    <string name="profile_email_value">miguelro@gmail.com</string>
    <string name="profile_member_since_value">01/01/2022</string>
    <string name="profile_account_status_value">non verified</string>
    <string name="account_verified">Verified</string>
    <string name="account_not_verified">Not verified</string>
    <string name="login_provider_google">Google</string>
    <string name="login_provider_email">Email</string>
    <string name="error_loading_data">Error loading data: %1$s</string>
    <string name="edit_profile_test">PROFILE</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="edit_profile_full_name">Full Name</string>
    <string name="edit_profile_email">Email</string>
    <string name="edit_profile_cod_telf">+00</string>
    <string name="edit_profile_phone">Phone</string>
    <string name="edit_profile_update_button">Update</string>
    <string name="edit_profile_change_image_button_description">Change profile picture</string>
    <string name="edit_ad_add_image">Add Image</string>
    <string name="edit_ad_brand_name">Brand Name</string>
    <string name="edit_ad_category">Category</string>
    <string name="edit_ad_condition">Condition</string>
    <string name="edit_ad_location">Location</string>
    <string name="edit_ad_price">Price</string>
    <string name="edit_ad_title">Title</string>
    <string name="edit_ad_description">Description</string>
    <string name="edit_ad_create_ad_button_text">Create Ad</string>
    <string name="selected_image">Selected image</string>
    <string name="close_image">Close image</string>
    <string name="error_empty_brand">Please enter a brand name.</string>
    <string name="error_empty_category">Please select a category.</string>
    <string name="error_empty_condition">Please select a condition.</string>
    <string name="error_empty_location">Por favor, ingresa una location.</string>
    <string name="error_empty_price">Please enter a price.</string>
    <string name="error_empty_description">Please enter a description.</string>
    <string name="error_no_images">Please select at least one image.</string>
    <string name="option_camera">Camera</string>
    <string name="option_gallery">Gallery</string>
    <string name="permission_denied">Permission denied.</string>
    <string name="image_title">Image title</string>
    <string name="image_description">Image description</string>
    <string name="select_location_title">Select Product Location</string>
    <string name="select_location_placeholder">Location not selected</string>
    <string name="confirm_location_button">Confirm Location</string>
    <string name="select_location_confirm">Confirm</string>
    <string name="desc_back">Back</string>
    <string name="desc_gps">Center on my location</string>
    <string name="loading">Loading…</string>
    <string name="publishing_ad">Publishing ad…</string>
    <string name="ad_published">Ad successfully published</string>
    <string name="category_icon">Category icon</string>
    <string name="category_name_placeholder">Category name</string>
    <string name="editText_location_home">Localización</string>
    <string name="editText_search_home">Buscar </string>
    <string name="text_category_home">Categorías</string>
    <string name="textView_category_home">Categoría</string>
    <string name="location_icon_home">Ícono de localización</string>
    <string name="search_icon_home">Ícono de búsqueda</string>
    <string name="home_location_hint">Select your location</string>
    <string name="home_search_hint">Search products…</string>
    <string name="home_no_ads_found">No ads available near you</string>
    <string name="home_loading_ads">Loading ads…</string>
    <string name="ad_card_title">Product title</string>
    <string name="ad_card_description">Brief description</string>
    <string name="ad_card_location">Location</string>
    <string name="ad_card_condition">Product condition</string>
    <string name="ad_card_price">%1$.2f€</string>
    <string name="ad_card_post_date">Posted on %1€s</string>
    <string name="ad_favorite_add">Add to favorites</string>
    <string name="ad_card_favorite_button_desc">Add or remove from favorites</string>
    <string name="ad_favorite_remove">Remove from favorites</string>
    <string name="ad_status_available">Available</string>
    <string name="ad_status_sold">Sold</string>
    <string name="tab_navigation">Ad tabs navigation</string>
    <string name="ads_view_pager">Ad view with swipe navigation</string>
    <string name="no_favorites_found">No favorite ads yet</string>
    <string name="favourites_title">Favourites</string>
    <string name="my_ads_title">My Ads</string>
    <string name="no_published_ads_found">You have not published any ads</string>
    <string name="edit_ad">Edit Ad</string>
    <string name="delete_ad">Delete Ad</string>
    <string name="reserve_ad">Reserve</string>
    <string name="product_detail_title">Product Detail</string>
    <string name="product_condition">Condition</string>
    <string name="product_category">Category</string>
    <string name="product_brand">Brand</string>
    <string name="product_location">Location</string>
    <string name="product_price">Price</string>
    <string name="product_description">Description</string>
    <string name="seller_info">Seller Information</string>
    <string name="member_since">Member since %1$s</string>
    <string name="product_image">Product image</string>
    <string name="product_price_format">%1$s €</string>
    <string name="product_brand_format">Brand: %1$s</string>
    <string name="product_location_format">Location: %1$s</string>
    <string name="image_counter_format">%1$d/%2$d</string>
    <string name="product_status_label">Status: %1$s</string>
    <string name="product_price_label">Price: %1$s €</string>
    <string name="reservation_title">Ads with Reservations</string>
    <string name="reservations_title">Reservation Requests</string>
    <string name="reservation_status">Status: %1$s</string>
    <string name="reservation_accept">Accept</string>
    <string name="reservation_reject">Reject</string>
    <string name="reservation_updated">Reservation %1$s</string>
    <string name="reservation_update_error">Failed to update reservation</string>
    <string name="reservation_date_format">MM/dd/yyyy hh:mm a</string>
    <string name="buyer_default_name">User</string>
    <string name="manage_ads_title">My ads</string>
    <string name="ad_status_label">State: %1$s</string>
    <string name="ad_price_label">Price: %1$s €</string>
    <string name="ad_reservation_label">Anuncios con Reserva</string>
    <string name="reservation_requests_title">Reservation requests</string>
    <string name="no_reservation_requests">No reservation request</string>
    <string name="reservation_btn_pending">Reservation pending</string>
    <string name="reservation_btn_accepted">Reservation accepted</string>
    <string name="reservation_btn_rejected">Reservation rejected</string>
    <string name="reservation_btn_reserved">Reserved</string>
    <string name="ad_deleted_ok">Ad deleted</string>
    <string name="ad_deleted_error">Failed to delete ad</string>
    <string name="default_username">User</string>
    <string name="email_sent">We have sent an email with instructions</string>
    <string name="save_changes">Save changes</string>
    <string name="reservation_date">Fecha reserva: %1$s</string>
</resources>